<resources>
    <string name="app_name">Keep Stock</string>
    <string name="title_activity_main">Keep Stock</string>
    <string name="fresh">&#x1F955; Fresh</string>
    <string name="long_term">Long Term</string>
    <string name="shopping_list_tab">&#x1F6D2; Shop</string>
    <string name="in_stock">In Stock</string>
    <string name="in_stock_expand">In Stock &#65088;</string>
    <string name="in_stock_collapse">In Stock &#10217;</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="out_of_stock_expand">Out Of Stock &#65088;</string>
    <string name="out_of_stock_collapse">Out Of Stock &#10217;</string>
    <string name="name">Name</string>
    <string name="type">Item Type</string>
    <string name="status">Current Status</string>
    <string name="expiry">Expiry (Optional) as DD/MM/YYYY</string>
    <string name="auto_move_to_shop">Auto Add To Shop Every Day (such as leafy greens which you may buy daily)</string>
    <string name="quantity">Quantity (Optional)</string>
    <string name="shop_status_string">&#x1F6D2; Shop</string>
    <string name="to_buy_collapse">&#x1F6D2; Shop &#10217;</string>
    <string name="purchased_today_collapse">Purchased Today &#10217;</string>
    <string name="to_buy_expand">&#x1F6D2; Shop &#65088;</string>
    <string name="purchased_today_expand">Purchased Today &#65088;</string>
    <string name="add_item">&#xFF0B; Add Item</string>
    <string name="add_button">Add</string>
    <string name="more_options">Show More Options</string>
    <string name="add_to_stock">Add to Stock</string>
    <string name="move_to_out_of_stock">Make Out of Stock</string>
    <string name="save">Save</string>
    <string name="add_to_shop">&#x1F6D2; Add to Shop</string>
    <string name="delete_item">&#x1f5d1; Delete Item</string>
    <string name="confirm_delete">Are you sure you want to delete %s from all lists?</string>
    <string name="name_empty_error">Item name cannot be empty</string>
    <string name="item_exist_error">Item with same name exists already. Do you wish to modify the existing item?</string>
    <string name="modify_name">No</string>
    <string name="expired">Expired!</string>
    <string name="expiring_soon">Expiring Soon!</string>
    <string name="expiry_notification_message">"%d items expired; %d items expiring soon"</string>
    <string name="expiry_notification_title">Stock Expiry Alert</string>
    <string name="search">&#x1F50D; Search</string>
    <string name="edit">Select</string>
    <string name="share">Share</string>
    <string name="cancel_edit">Done</string>
    <string name="name_to_search">Enter item name to search</string>
    <string name="delete_selected">&#x1f5d1; Delete</string>
    <string name="delete_confirmation">Are you sure to Delete selected items?</string>
    <string name="add_to_shop_confirmation">Are you sure to Add to Shop selected items?</string>
    <string name="add_to_stock_confirmation">Are you sure to Add to Stock selected items?</string>
    <string name="move_to_out_of_stock_confirmation">Are you sure to Make Out of Stock selected items?</string>
    <string name="close_icon">X</string>
    <string name="no_items_to_display">No items in this list. Click \"QUICK ADD\" or \"&#xFF0B; ADD ITEM\" or edit other lists to add items here.</string>
    <string name="no_items_purchased_today">No item in stock is purchased today.</string>
    <string name="last_added">Last Added To Stock: %s</string>
    <string name="easy_add">Quick Add</string>
    <string name="groceries">Vegetables &amp; Groceries</string>
    <string name="fruits">Fruits</string>
    <string name="non_veg">Non Veg</string>
    <string name="stationery">Stationery</string>
    <string name="baby_care">Baby Care</string>
    <string name="other_items">Other Household Items</string>
    <string name="search_all_lists">&#x1F50D; Search All Categories</string>
    <string name="search_groceries">&#x1F50D; Search Vegetables &amp; Groceries</string>
    <string name="search_fruits">&#x1F50D; Search Fruits</string>
    <string name="search_non_veg">&#x1F50D; Search Non Veg</string>
    <string name="search_stationery">&#x1F50D; Search Stationery</string>
    <string name="search_baby_care">&#x1F50D; Baby Care</string>
    <string name="search_other_items">&#x1F50D; Search Other Household Items</string>
    <string name="done">Done</string>
    <string name="rate_now">Rate Now</string>
    <string name="remind_later">Later</string>
    <string name="never_ask">Never Ask</string>
    <string name="rate_app_title">Rate Keep Stock</string>
    <string name="rate_app_message">Hope you are finding this app useful.\nPlease take a moment to rate us in play store. It won\'t take more than a minute.\n\nThank you for the support!</string>
    <string name="share_purchased_today">Purchased Today</string>
    <string name="share_to_buy">Shop</string>
    <string name="share_long_term_instock">Long Term - In Stock</string>
    <string name="share_long_term_outofstock">Long Term - Out Of Stock</string>
    <string name="share_short_term_instock">Short Term - In Stock</string>
    <string name="share_short_term_outofstock">Short Term - Out Of Stock</string>
    <string name="share_row_format">%d. %1s</string>
    <string name="share_row_format_qty">%d. %1s (%2s)</string>
</resources>
