<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageButton
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="right"
        android:scaleType="fitXY"
        android:id="@+id/close"
        android:src="@android:drawable/ic_menu_close_clear_cancel"/>

    <EditText
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_horizontal"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:hint="@string/quantity"
        android:inputType="text" />

    <EditText
        android:id="@+id/expiry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:hint="@string/expiry"
        android:inputType="date" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/more_options_check"
        android:layout_marginBottom="8dp"
        android:text="@string/more_options"/>
    <LinearLayout
        android:id="@+id/more_options"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/fresh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fresh" />

            <RadioButton
                android:id="@+id/short_term"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/short_term" />

            <RadioButton
                android:id="@+id/long_term"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/long_term" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/auto_move_to_out_of_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:gravity="center_horizontal"
            android:text="@string/auto_move_to_out_of_stock" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/delete"
            android:text="@string/delete_item" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusedByDefault="true"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:id="@+id/button_save"
            android:text="@string/save" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_move_out"
            android:text="@string/out_of_stock" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_add_to_stock"
            android:text="@string/add_to_stock" />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_add_to_shop"
            android:text="@string/add_to_shop" />

    </LinearLayout>


</LinearLayout>