<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/list_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:gravity="left"
        android:paddingLeft="0dp" />

    <LinearLayout
        android:id="@+id/other_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/options_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="right"
                android:text="@string/share" />

            <View style="@style/VerticalDivider" />

            <Button
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="left"
                android:paddingRight="0dp"
                android:text="@string/edit" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="left"
                android:paddingRight="0dp"
                android:text="@string/cancel_edit"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>